# better-benchmark

./: .corpus_baseline.json  .gitignore  ADVERSARIAL_REVIEW.md  AGENT_INSTRUCTIONS.md  BENCHMARKING_FLOW.md  CLAUDE.md  CORPUS_MIGRATION_PLAN.md  DESIGN.md  EXPAND_BENCHMARKS.md  FINDINGS.md  INVESTIGATION_QUEUE.md  INVESTIGATION_RESULTS.md  INVEST_INSTRUCTIONS.MD  ORACLE_GAP_CLOSING_PLAYBOOK.md  ORACLE_IMPLEMENTER_PROMPT.md  ORACLE_MANAGER_PROMPT.md  ORACLE_MIGRATION_INSTRUCTIONS.md  PR9_SPEC.md  PRIOR_INVESTIGATION.md  PROGRESS.md  PR_STACK.md  README.md  REPRO_QUALITY_ISSUES.md  REPRO_REUSE_DESIGN.md  RESULTS.md  ROADMAP.md  STATUS.md  all_regressions.json  analyze_deepseek_cats.py  bench_13_repros.py  bench_13_results.json  bench_fused_transpose_sum.py  bench_no_oracle.py  bench_tile_sizes.py  benchmark_all.py  byte_accounting.py  canonicalize_repros.py  capture_all_ci_models.py  capture_ci_models.py  capture_genai_kernels.py  (+93 more)
.claude/: settings.json
analysis/: SUMMARY.json  fusion_classification.json
benchmarks/: baseline_v1_b200.json  batchnorm_fusion_ceiling.py  full_graph_validation_b200.json  v1.json
captures_hf/: capture_results.json
cutile_results/: comparison_merged.csv  comparison_merged.json  comparison_pre_fix_787.json  cutile_1717dirs_first_shape.json  cutile_787dirs_all_shapes_post_fix.json  cutile_merged.json  summary.md  triton_1717dirs_first_shape.json  triton_787dirs_all_shapes.json  triton_merged.json
docs/: CLASSIFICATION.md  METHODOLOGY.md  SOL_ANALYSIS.md  combo_kernel_pid_subblock_interference.md  combo_kernel_regressions.md
(+42772 files in other folders)
